--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -17,7 +17,6 @@
         </select>
     </header>
     <main id="lessonContent"></main>
-    <script src="../js/utils.js"></script>
-    <script src="../js/lessons.js"></script>
+    <script type="module" src="../js/lessons.js"></script>
 </body>
 </html>
