--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons - U.S. Citizenship Test Study App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Naskh+Arabic:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/lessons.css">
 </head>
 <body>
     <header>
         <a href="../../index.html" class="back-button">←</a>
-        <h1>Lessons</h1>
+        <h1 id="lessonsTitle">Lessons</h1>
         <select id="languageSelect">
             <option value="en">English</option>
             <option value="ps">پښتو (Pashto)</option>
