--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 <body>
     <header>
         <h1 id="appTitle">U.S. Citizenship Test Study App</h1>
-        <select id="languageSelect">
-            <option value="en">English</option>
-            <option value="ps">پښتو (Pashto)</option>
-        </select>
+        <p class="subtitle">English & Pashto (انګلیسي او پښتو)</p>
     </header>
     <nav>
         <a href="src/pages/lessons.html" class="nav-item">
