--- a/src/pages/lessons.html
+++ b/src/pages/lessons.html
@@ -13,11 +13,8 @@
 <body>
     <header>
         <a href="../../index.html" class="back-button">←</a>
-        <h1 id="lessonsTitle">Lessons</h1>
-        <select id="languageSelect">
-            <option value="en">English</option>
-            <option value="ps">پښتو (Pashto)</option>
-        </select>
+        <h1 id="lessonsTitle">U.S. Citizenship Study - Lessons</h1>
+        <p class="subtitle">English & Pashto (انګلیسي او پښتو)</p>
     </header>
     <main id="lessonContent"></main>
     <script type="module" src="../js/lessons.js"></script>
