--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <header>
+        <div class="header-controls">
+            <button class="theme-toggle" onclick="toggleTheme()" title="Toggle Theme">
+                🌙
+            </button>
+        </div>
         <h1 id="appTitle">U.S. Citizenship Test Study App</h1>
         <p class="subtitle">English & Pashto (انګلیسي او پښتو)</p>
     </header>
