--- a/test-fixed-lessons.html
+++ b/test-fixed-lessons.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons - U.S. Citizenship Test Study App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Test Fixed Lessons</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Naskh+Arabic:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/lessons.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/lessons.css">
 </head>
 <body>
     <header>
-        <a href="../../index.html" class="back-button">←</a>
-        <h1 id="lessonsTitle">🇺🇸 U.S. Citizenship Study - All Questions</h1>
+        <a href="index.html" class="back-button">←</a>
+        <h1 id="lessonsTitle">🇺🇸 U.S. Citizenship Study - All Questions (FIXED)</h1>
         <p class="subtitle">Complete Study Guide - English & Pashto (انګلیسي او پښتو)</p>
     </header>
     <main id="lessonContent">
@@ -22,6 +20,6 @@
             <p>Please wait while we load all citizenship test questions.</p>
         </div>
     </main>
-    <script type="module" src="../js/lessons.js"></script>
+    <script type="module" src="src/js/lessons.js"></script>
 </body>
 </html>
